// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Mypins Component Mypins landing page will render bubbles until ready 1`] = `
<div
  style={
    Object {
      "marginTop": 100,
    }
  }
>
  <Loading />
</div>
`;

exports[`The Mypins Component Mypins landing page will render message if no pins created found 1`] = `
<Fragment>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-between",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": 80,
        "width": 300,
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
        }
      }
    >
      <ForwardRef(Avatar)
        sx={
          Object {
            "bgcolor": "#1DA1F2",
            "height": 52,
            "mb": 2,
            "width": 52,
          }
        }
      >
        <Memo(ForwardRef(TwitterIcon))
          style={
            Object {
              "fontSize": 45,
            }
          }
        />
      </ForwardRef(Avatar)>
      <ForwardRef(Typography)
        variant="h4"
      >
        tester displayName
      </ForwardRef(Typography)>
      <ForwardRef(Typography)
        style={
          Object {
            "marginLeft": 15,
          }
        }
      >
        @tester username
      </ForwardRef(Typography)>
    </div>
    <div
      style={
        Object {
          "marginRight": 18,
        }
      }
    >
      <UserPinsSelector
        displaySetting="created"
        setDisplaySetting={[Function]}
      />
    </div>
    <ForwardRef(Fab)
      aria-label="add"
      color="default"
      id="createpin"
      onClick={[Function]}
      sx={
        Object {
          "marginTop": 1,
          "zIndex": 1,
        }
      }
    >
      <Memo(ForwardRef(AddIcon))
        fontSize="large"
      />
    </ForwardRef(Fab)>
  </div>
  <ForwardRef(Box)
    sx={
      Object {
        "backgroundColor": "#eeeeee",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": 10,
        "padding": 2,
      }
    }
  >
    <ForwardRef(Typography)
      style={
        Object {
          "textAlign": "center",
        }
      }
      variant="h4"
    >
      Welcome!
    </ForwardRef(Typography)>
    <ForwardRef(Typography)
      textAlign="center"
      variant="h6"
    >
      You have not created any pins, you can create some by clicking on the button above
    </ForwardRef(Typography)>
  </ForwardRef(Box)>
</Fragment>
`;

exports[`The Mypins Component Mypins landing page will render message if no pins saved found 1`] = `
<Fragment>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-between",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": 80,
        "width": 300,
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
        }
      }
    >
      <ForwardRef(Avatar)
        sx={
          Object {
            "bgcolor": "#1DA1F2",
            "height": 52,
            "mb": 2,
            "width": 52,
          }
        }
      >
        <Memo(ForwardRef(TwitterIcon))
          style={
            Object {
              "fontSize": 45,
            }
          }
        />
      </ForwardRef(Avatar)>
      <ForwardRef(Typography)
        variant="h4"
      >
        tester displayName
      </ForwardRef(Typography)>
      <ForwardRef(Typography)
        style={
          Object {
            "marginLeft": 15,
          }
        }
      >
        @tester username
      </ForwardRef(Typography)>
    </div>
    <div
      style={
        Object {
          "marginRight": 18,
        }
      }
    >
      <UserPinsSelector
        displaySetting="saved"
        setDisplaySetting={[Function]}
      />
    </div>
    <ForwardRef(Fab)
      aria-label="add"
      color="default"
      id="createpin"
      onClick={[Function]}
      sx={
        Object {
          "marginTop": 1,
          "zIndex": 1,
        }
      }
    >
      <Memo(ForwardRef(AddIcon))
        fontSize="large"
      />
    </ForwardRef(Fab)>
  </div>
  <ForwardRef(Box)
    sx={
      Object {
        "backgroundColor": "#eeeeee",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": 10,
        "padding": 2,
      }
    }
  >
    <ForwardRef(Typography)
      textAlign="center"
      variant="h6"
    >
      You have no pins saved, you can save some from the
       
      <Link
        to="/"
      >
        home
      </Link>
       
      page
    </ForwardRef(Typography)>
  </ForwardRef(Box)>
</Fragment>
`;

exports[`The Mypins Component Mypins landing page will render pins if found 1`] = `
<Fragment>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "space-between",
        "marginLeft": "auto",
        "marginRight": "auto",
        "marginTop": 80,
        "width": 300,
      }
    }
  >
    <div
      style={
        Object {
          "alignItems": "center",
          "display": "flex",
          "flexDirection": "column",
          "justifyContent": "center",
        }
      }
    >
      <ForwardRef(Avatar)
        sx={
          Object {
            "bgcolor": "#1DA1F2",
            "height": 52,
            "mb": 2,
            "width": 52,
          }
        }
      >
        <Memo(ForwardRef(TwitterIcon))
          style={
            Object {
              "fontSize": 45,
            }
          }
        />
      </ForwardRef(Avatar)>
      <ForwardRef(Typography)
        variant="h4"
      >
        tester displayName
      </ForwardRef(Typography)>
      <ForwardRef(Typography)
        style={
          Object {
            "marginLeft": 15,
          }
        }
      >
        @tester username
      </ForwardRef(Typography)>
    </div>
    <div
      style={
        Object {
          "marginRight": 18,
        }
      }
    >
      <UserPinsSelector
        displaySetting="created"
        setDisplaySetting={[Function]}
      />
    </div>
    <ForwardRef(Fab)
      aria-label="add"
      color="default"
      id="createpin"
      onClick={[Function]}
      sx={
        Object {
          "marginTop": 1,
          "zIndex": 1,
        }
      }
    >
      <Memo(ForwardRef(AddIcon))
        fontSize="large"
      />
    </ForwardRef(Fab)>
  </div>
  <ImageBuild
    deletePin={[Function]}
    displayBrokenImage={true}
    pinImage={null}
    pinList={
      Array [
        Object {
          "_id": 3,
          "comments": Array [],
          "createdAt": "2020-12-25T00:00:00.000+00:00",
          "hasSaved": false,
          "imgDescription": "imgDescription id-3",
          "imgLink": "imgLink id-3",
          "owner": Object {
            "name": "owner id-3",
            "service": "github",
            "userId": "3",
          },
          "owns": true,
          "savedBy": Array [
            Object {
              "name": "savedBy - id-3",
              "service": "google",
              "userId": "3",
            },
            Object {
              "name": "savedBy - id-3",
              "service": "github",
              "userId": "3",
            },
          ],
          "tags": Array [],
        },
      ]
    }
    ready={true}
    user={
      Object {
        "authenticated": true,
        "displayName": "tester displayName",
        "service": "twitter",
        "userId": "tester user Id",
        "username": "tester username",
      }
    }
  />
</Fragment>
`;
